# ghost-swarm

./: .dockerignore  .gitignore  Makefile  README.md  agentgateway-config.yaml  diagnose_gateway.sh  docker-compose.yml  install.sh  main.py  pyproject.toml  test_services.sh
Dockerfiles/: Dockerfile.base  Dockerfile.mcp  Dockerfile.orchestrator  Dockerfile.worker
common/: __init__.py
common/communication/: a2a.py  concurrency.py
common/config/: settings.py
common/inference/: __init__.py  classifier.py  engine.py  gateway_client.py  inference_gateway_client.py  providers.py
common/logging/: logger.py
common/models/: agent.py  messages.py
docs/: AGENT_MESH_ARCHITECTURE.md  MCP_A2A_COMPLETE.md  MCP_COMPLETE.md  MCP_GUIDE.md  MCP_IMPLEMENTATION.md  MCP_INTEGRATION_COMPLETE.md  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  WHATS_NEW.md  project_structure.md
docs/architecture/: architecture.md
ghosts/orchestrator/: orchestrator.py
ghosts/worker/: worker.py
mcp_server/: agents.py  base.py  claude_client.py  examples.py  filesystem.py
tests/: concurrency_examples.py  test_agent.py
