[project]
name = "ghost-swarm"
version = "0.2.0"
description = "AI Agent Swarm with Inference Gateway, MCP Integration and Agent2Agent Communication"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # HTTP Client (for Inference Gateway)
    "httpx>=0.27.0",
    # MCP and Agent Communication
    "mcp>=1.1.0",
    "a2a-sdk[http-server]>=0.2.0",
    "websockets>=13.0",
    "starlette>=0.37.0",
    # Async and Concurrency
    "asyncio>=3.4.3",
    "aiohttp>=3.10.0",
    "uvloop>=0.21.0",
    # Configuration & Environment
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Pub/Sub and Message Queue
    "redis>=5.1.0",
    # Logging and Monitoring
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    # API and Web Framework
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    # Utilities
    "tenacity>=9.0.0",
    "validators>=0.34.0",
    "jsonschema>=4.23.0",
    "anthropic>=0.71.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

docker = [
    "docker>=7.1.0",
]

# Optional: Only needed if you want to run inference locally (not via gateway)
# inference = [
#     "anthropic>=0.39.0",
#     "openai>=1.54.0",
# ]

# Optional: Only needed for RAG features
rag = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "sentence-transformers>=3.0.0",
]

# Optional: Only needed for task queue
celery-support = [
    "celery>=5.4.0",
]


[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
